scripts/nullaway/wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8.txt
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/SavePredictiveEngineProjectService.java:28: error: [NullAway] dereferenced expression projectRecovered.getTeam() is @Nullable
        logger.debug("TEAM SIZE = " + projectRecovered.getTeam().size());
                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectMapper.java:19: error: [NullAway] dereferenced expression project is @Nullable
        projectMap.put("id", project.getId());
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectMapper.java:25: error: [NullAway] enhanced-for expression project.getTeam() is @Nullable
        for (Employee employee : project.getTeam()) {
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectMapper.java:35: error: [NullAway] dereferenced expression projectMap is @Nullable
        project.setId((String) projectMap.get("id"));
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectMapper.java:41: error: [NullAway] enhanced-for expression (List<Map<String, Object>>) projectMap.get("team") is @Nullable
        for (Map<String, Object> employeeMap : (List<Map<String, Object>>) projectMap.get("team")) {
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dry/before/EmployeeDAO.java:41: error: [NullAway] dereferenced expression employeeMap is @Nullable
        employee.setId((String) employeeMap.get("id"));
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dry/before/EmployeeDAO.java:59: error: [NullAway] dereferenced expression employeeMap is @Nullable
        employee.setId((String) employeeMap.get("id"));
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dry/after/DAOUtil.java:28: error: [NullAway] dereferenced expression employeeMap is @Nullable
        employee.setId((String) employeeMap.get("id"));
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/before/SavePredictiveEngineProjectService.java:38: error: [NullAway] dereferenced expression projectRecovered.getTeam() is @Nullable
        logger.debug("TEAM SIZE = " + projectRecovered.getTeam().size());
                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/before/ProjectMapper.java:25: error: [NullAway] enhanced-for expression project.getTeam() is @Nullable
        for (Employee employee : project.getTeam()) {
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/before/ProjectMapper.java:35: error: [NullAway] dereferenced expression projectMap is @Nullable
        project.setId((String) projectMap.get("id"));
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/before/ProjectMapper.java:41: error: [NullAway] enhanced-for expression (List<Map<String, Object>>) projectMap.get("team") is @Nullable
        for (Map<String, Object> employeeMap : (List<Map<String, Object>>) projectMap.get("team")) {
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/after/SavePredictiveEngineProjectService.java:28: error: [NullAway] dereferenced expression projectRecovered.getTeam() is @Nullable
        logger.debug("TEAM SIZE = " + projectRecovered.getTeam().size());
                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/after/ProjectMapper.java:25: error: [NullAway] enhanced-for expression project.getTeam() is @Nullable
        for (Employee employee : project.getTeam()) {
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/after/ProjectMapper.java:35: error: [NullAway] dereferenced expression projectMap is @Nullable
        project.setId((String) projectMap.get("id"));
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/after/ProjectMapper.java:41: error: [NullAway] enhanced-for expression (List<Map<String, Object>>) projectMap.get("team") is @Nullable
        for (Map<String, Object> employeeMap : (List<Map<String, Object>>) projectMap.get("team")) {
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/srp/after/EmployeeMapper.java:26: error: [NullAway] dereferenced expression employeeMap is @Nullable
        employee.setId((String) employeeMap.get("id"));
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/lsp/before/TheBoss.java:54: error: [NullAway] enhanced-for expression predictiveEngine.getTeam() is @Nullable
        for (Employee employee : predictiveEngine.getTeam()) {
                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/lsp/after/TheBoss.java:21: error: [NullAway] enhanced-for expression predictiveEngine.getTeam() is @Nullable
        for (Employee employee : predictiveEngine.getTeam()) {
                                                         ^
    (see http://t.uber.com/nullaway )
../wpi/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/database/CollectionsTest.java:38: error: [NullAway] dereferenced expression employee is @Nullable
            Assert.assertEquals(employee.get("id"), entry.getKey());
                                        ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
